# C99-Win32-Wifi-Utility

./: .gitignore  .gitmodules  CMakeLists.txt  build.cmd  building.md  main.c  np_cicd.ini  np_cicd_build.cmd  readme.md
examples/: ifaces_listing.py
rsc/icons/: MakeIcon.pb
rsc/rc/: lscom-cli.rc  wifi-cli.rc  wifi-gui.rc
src/cli/: exitCodes.h  main.c
src/cli/handlers/: connection.c  connection.h  iface.c  iface.h  profile.c  profile.h
src/commons/: interfaces.c  interfaces.h  profiles.c  profiles.h
src/gui/: main.c
